# talleo-tip-bot-telegram

./: .gitignore  Pipfile  README.md  config.yml.example  gen_requirements.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: dependencies.yml  tox.yml
talleo_tip_bot_telegram/: bot.py  config.py  models.py  rpc_client.py  store.py  wallet.py
tests/: base_test.py
